--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "example",
+  "name": "@redux-mvc/docs",
   "private": true,
-  "version": "1.22.1",
-  "license": "Apache 2.0",
+  "version": "1.0.0",
+  "author": "Gonzalo Rafael Acosta (https://github.com/gacosta89)",
+  "license": "MIT",
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0",
     "dev:clean": "yarn clean && yarn dev",
@@ -10,7 +11,8 @@
     "build:clean": "yarn clean && gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "build:analyze": "ANALYZE=true yarn build"
+    "build:analyze": "ANALYZE=true yarn build",
+    "deploy": "yarn clean && gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "gatsby": "^2.19.0",
@@ -18,5 +20,8 @@
     "gatsby-theme-carbon": "^1.22.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
